// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapsDispatchToProps createComment 1`] = `
Array [
  "dispatch",
  Array [
    Object {
      "graphql": Object {
        "query": "mutation ($postId: String, $text: String) {
        createComment(data: {postId: $postId, text: $text}) {
          id
          text
          post {
            id
          }
          createdAt
          creator {
            id
          }
        }
      }",
        "variables": Object {
          "postId": "1",
          "text": "some comment",
        },
      },
      "meta": Object {
        "analytics": "Comment Created",
        "extractModel": "Comment",
        "optimistic": true,
        "postId": "1",
        "tempId": "post1_1",
        "text": "some comment",
      },
      "type": "CommentEditor/CREATE_COMMENT",
    },
  ],
]
`;

exports[`mapsDispatchToProps editPost 1`] = `
Array [
  "navigate",
  Array [
    Object {
      "key": "PostEditor",
      "params": Object {
        "id": "1",
      },
      "routeName": "PostEditor",
    },
  ],
]
`;

exports[`mapsDispatchToProps maps 1`] = `undefined`;

exports[`mapsDispatchToProps showMember 1`] = `
Array [
  "navigate",
  Array [
    Object {
      "key": "MemberProfile",
      "params": Object {
        "id": 1,
      },
      "routeName": "MemberProfile",
    },
  ],
]
`;

exports[`mapsDispatchToProps showTopic 1`] = `
Array [
  "navigate",
  Array [
    Object {
      "key": "Feed",
      "params": Object {
        "communityId": 4,
        "topicName": "mytopicname",
      },
      "routeName": "Feed",
    },
  ],
]
`;

exports[`mapsStateToProps 1`] = `
Object {
  "currentUser": undefined,
  "id": "1",
  "isProject": false,
  "post": Object {
    "commenters": Array [],
    "communities": Array [
      Object {
        "id": "2",
        "name": "Home",
      },
    ],
    "creator": Object {
      "id": "10",
    },
    "fileAttachments": Array [
      Object {
        "id": "1",
        "post": "1",
        "type": "file",
        "url": "http://foo.com/foo.pdf",
      },
    ],
    "fileUrls": Array [
      "http://foo.com/foo.pdf",
    ],
    "id": "1",
    "imageUrls": Array [
      "http://foo.com/bar.png",
    ],
    "linkPreview": undefined,
    "members": Array [],
    "pinned": undefined,
    "topics": Array [],
  },
}
`;
